--- a/toi/localisation/english/mex_l_english.yml
+++ b/toi/localisation/english/mex_l_english.yml
@@ -50,37 +50,37 @@
  mexico_politics.21.a: "Viva La Constitucion"
  mexico_politics.22.t: "Dealing With Viadurri"
  mexico_politics.22.d: "One of the most frustrating thorns in the side of the Liberal government for years now is Governor José Santiago Vidaurri Valdez. Dominating northern Mexico, Viadurri seems himself more in association with Mexico than part of it. Because of this mindset he is aggravated by the central government's weak attempts to raise revenue by taxing trade through his land borders with the United States, and refuses to turn over revenues generated from said taxation. With Congress now seated, the government has a more organized and stronger bagaining position. We can attempt to reach a settlement with Viadurri, where give several concessions but remain amicable with him. Or we can use the bludgeon, and compel the release of those funds. This will definitely escalate tensions in the north though."
- mexico_politics.22.a: "TODO"
- MEX_negotiate_with_viadurri_tt: ""
- mexico_politics.22.b: "TODO"
- MEX_confront_viadurri_tt: ""
+ mexico_politics.22.a: "We Can Be Reasonable"
+ MEX_negotiate_with_viadurri_tt: "§GWe Will Negotiate a Settlement With Viadurri§!"
+ mexico_politics.22.b: "He Won't Be Reasonable"
+ MEX_confront_viadurri_tt: "§RWe Will Compel Viadurri, This Will Have Consequences§!"
  mexico_politics.23.t: "Request For Emergency Powers"
- mexico_politics.23.d: "TODO"
- mexico_politics.23.a: "TODO"
+ mexico_politics.23.d: "As Soon as the new Congress was seated, President Comonfort requested emergency powers to suppress the ongoing revolts in several states. In response Congress turned him down. However they have passed a decree suspending certain rights and empowering the state governors with emergency powers in a smaller fashion of addressing the civil disturbances erupting across the nation."
+ mexico_politics.23.a: "Better Than Nothing?"
  mexico_politics.24.t: "National Insurrection"
- mexico_politics.24.d: "TODO"
- mexico_politics.24.a: "TODO"
+ mexico_politics.24.d: "Riots and Rebellion are breaking out across the Nation! Even as we try to hold on to some semblance of order, in the countryside bands of Conservative rebels are organizing, gathering arms, and plotting. This crisis is getting out of hand and we have to start considering extreme measures to address it."
+ mexico_politics.24.a: "We Must Defend The Constitution"
  mexico_politics.30.t: "Partisanship Divides Mexico"
- mexico_politics.30.d: "TODO"
- mexico_politics.30.a: "TODO"
+ mexico_politics.30.d: "Liberals and Conservatives are drawing partisan lines across our nation, we must dissolve these tensions!"
+ mexico_politics.30.a: "The Crisis Escalates"
  mexico_politics.31.t: "Partisanship Divides Mexico"
- mexico_politics.31.d: "TODO"
- mexico_politics.31.a: "TODO"
+ mexico_politics.31.d: "Liberals and Conservatives are drawing partisan lines across our nation, we must dissolve these tensions!"
+ mexico_politics.31.a: "The Crisis Escalates"
  mexico_politics.32.t: "Partisanship Divides Mexico"
- mexico_politics.32.d: "TODO"
- mexico_politics.32.a: "TODO"
+ mexico_politics.32.d: "Liberals and Conservatives are drawing partisan lines across our nation, we must dissolve these tensions!"
+ mexico_politics.32.a: "The Crisis Escalates"
  mexico_politics.33.t: "Partisanship Divides Mexico"
- mexico_politics.33.d: "TODO"
- mexico_politics.33.a: "TODO"
+ mexico_politics.33.d: "Liberals and Conservatives are drawing partisan lines across our nation, we must dissolve these tensions!"
+ mexico_politics.33.a: "The Crisis Escalates"
  mexico_politics.34.t: "Partisanship Divides Mexico"
- mexico_politics.34.d: "TODO"
- mexico_politics.34.a: "TODO"
+ mexico_politics.34.d: "Liberals and Conservatives are drawing partisan lines across our nation, we must dissolve these tensions!"
+ mexico_politics.34.a: "The Crisis Escalates"
  mexico_politics.35.t: "Partisanship Divides Mexico"
- mexico_politics.35.d: "TODO"
- mexico_politics.35.a: "TODO"
+ mexico_politics.35.d: "Liberals and Conservatives are drawing partisan lines across our nation, we must dissolve these tensions!"
+ mexico_politics.35.a: "The Crisis Escalates"
  mexico_politics.36.t: "Partisanship Divides Mexico"
- mexico_politics.36.d: "TODO"
- mexico_politics.36.a: "TODO"
+ mexico_politics.36.d: "Liberals and Conservatives are drawing partisan lines across our nation, we must dissolve these tensions!"
+ mexico_politics.36.a: "The Crisis Escalates"
  MEX_mexican_reform_war_resistance_476: "Quell Resistance in [476.GetName]"
  MEX_mexican_reform_war_resistance_475: "Quell Resistance in [475.GetName]"
  MEX_mexican_reform_war_resistance_474: "Quell Resistance in [474.GetName]"
