--- a/toi/localisation/english/usa_l_english.yml
+++ b/toi/localisation/english/usa_l_english.yml
@@ -938,6 +938,21 @@
  USA_gilded_formation_improvements_desc: "Thanks to the Great White Fleet's journey, we've gained invaluable experience in how to organize our Navy's formations for long-range deployments."
  USA_gilded_columbia_gem_of_the_ocean: "Columbia, Gem of the Ocean"
  USA_gilded_columbia_gem_of_the_ocean_desc: "O Columbia! the gem of the ocean,\nThe home of the brave and the free,\nThe shrine of each patriot's devotion,\nA world offers homage to thee!"
+ USA_gilded_el_senor_abrasador: "El Señor Abrasador"
+ USA_gilded_el_senor_abrasador_desc: "Spain is the oldest colonial empire still holding territory in the Americas. Since it's lost the vast majority of its colonies, the old empire has been in a period of decline, struggling to keep its own homeland stable and to hold onto a small set of overseas islands. This is an opportunity. An opportunity for America to topple one of the oldest empires and demonstrate American strength on the global stage."
+ USA_gilded_assert_our_position_in_the_caribbean: "Assert Our Position In The Caribbean"
+ USA_gilded_assert_our_position_in_the_caribbean_desc: "The Caribbean is a particular weak spot for the Spanish. The Cubans have a history of resisting Spanish rule and with them being just off our shores, it'll be easy to blockade and invade the island should a war arise. Showing the Spanish the reality of their situation will hopefully dissuade them from being too aggressive in future negotiations."
+ USA_gilded_santo_domingo_forward_operating_base: "Santo Domingo Forward Operating Base"
+ USA_gilded_santo_domingo_forward_operating_base_desc: "The recently acquired land of Santo Domingo will provide us with an excellent strategic position in a war with Spain over the island of Cuba."
+ USA_gilded_yet_another_offer: "Yet Another Offer"
+ USA_gilded_yet_another_offer_desc: "We've historically made a few attempts to purchase the island of Cuba off of Spain with little success. Perhaps with recent world events, the Spanish will be more...malleable to a peaceful solution to this point of tension."
+ USA_gilded_a_peaceful_resolution: "A Peaceful Resolution"
+ USA_gilded_a_peaceful_resolution_desc: "Thankfully, we've managed to avoid a conflict with Spain over the island of Cuba. Now, we can begin looking toward other matters."
+ USA_gilded_cuban_statehood: "Cuban Statehood"
+ USA_gilded_cuban_statehood_desc: ""
+ USA_gilded_fund_cuban_rebels: "Support Cuban Rebels"
+ USA_gilded_fund_cuban_rebels_desc: "The Spanish seem completely unwilling to handle the Cuba question peacefully. We need to start preparing for a violent confrontation with the Spanish and supporting the Cuban rebels resisting colonial rule will give us a good start."
+
  USA_demobilize_the_military: "Demobilize The Military"
  USA_demobilize_the_military_desc: "We had to massively increase the size of the armed forces during the Civil War. Now that the war is over, the costs of maintaining that military are overcoming the benefits we're recieving from it. It's time to demobilize and re-focus on our civilian economy."
  USA_research_civil_war: "Study the Civil War"
@@ -2162,6 +2177,12 @@ usaPolitics_9_desc_no_dem_president: "The 1876 National Convention of the Democr
 usaPolitics.9.a: "[ROOT.GetLeader]!"
 usaPolitics.9.b: "Samuel J. Tilden!"
 
+### MANIFEST DESTINY EVENTS
+usa_manifest_destiny.1.t: "Admission of Cuba"
+usa_manifest_destiny.1.desc: "With the island of Cuba now firmly under our control and the territory itself stabilized, it's now time for the state of Cuba to be fully integrated into the Union with the same rights and representation as any other state."
+usa_manifest_destiny.1.a: "Welcome to the Union!"
+usa_manifest_destiny.1.b: "They should become a free state!"
+usa_manifest_destiny.1.c: "It should become a slave state!"
 # FOCUS TREE NAMES
 usa_lincoln_reconstruction_ft: "Lincoln Reconstruction"
 USA_decision_category_clayton_conspiracy: "The Clayton Conspiracy"
