--- a/toi/localisation/english/parties_l_english.yml
+++ b/toi/localisation/english/parties_l_english.yml
@@ -15,6 +15,8 @@
  USA_northern_democrat_party_long: "Democratic Party"
  USA_southern_democrat_party: "Southern Democrats"
  USA_southern_democrat_party_long: "Democratic Party"
+ usa_redeemer_democrats_party: "Redeemer Democrats"
+ usa_redeemer_democrats_party_long: "Redeemer Democrats"
  USA_free_soil_party: "Free Soilers"
  USA_free_soil_party_long: "Free Soil Party"
  USA_norton_party: "Norton Loyalists"
