--- a/toi/localisation/english/prussia_l_english.yml
+++ b/toi/localisation/english/prussia_l_english.yml
@@ -546,6 +546,12 @@ prussiaforeign.51.a: "Good to know."
 prussiaforeign.52.t: "Warning from Russia"
 prussiaforeign.52.d: "§G[RUS.GetNameWithFlag]§! has warned us that a war with §3[FRA.GetNameWithFlag]§! would lead to hostility from §G[RUS.GetNameWithFlag]§!. While we don't yet have much reason to enter into a war with §3[FRA.GetNameWithFlag]§! as of right now, we could be called into it by §O[AUS.GetNameWithFlag]§!. Should this happen, it won't be our choice to accept or reject their request."
 prussiaforeign.52.a: "We'll watch the situation as it develops."
+prussiaforeign.53.t: "Austria Calls For Aid"
+prussiaforeign.53.d: "With war beginning in Italy, §O[AUS.GetNameWithFlag]§! has called on us to defend them. This directly goes against the warning issued to us by §G[RUS.GetNameWithFlag]§!. We will do our best to help defend our allies, but also avoid war in the east."
+prussiaforeign.53.a: "Whatever's necessary."
+prussiaforeign.54.t: "Skirting the Warning From Russia"
+prussiaforeign.54.d: "With a request from §O[AUS.GetNameWithFlag]§! to assist them in their war, we have to consider the warning we have previously received from §G[RUS.GetNameWithFlag]§!. While we don't need to attack §3[FRA.GetNameWithFlag]§! yet, this may change soon."
+prussiaforeign.54.a: "We'll see what we can do."
 
 #Prussian Elections
 prussiaelection.1.t: "Parliamentary Elections of 1858"
