MEC Politics reshuffle

--- a/toi/localisation/english/parties_l_english.yml
+++ b/toi/localisation/english/parties_l_english.yml
@@ -745,9 +745,11 @@
  MEX_fundamentalism_party: "Conferencia del Episcopado Mexicano"
 
  MEC_fundamentalism_party: "Conferencia del Episcopado Mexicano"
- MEC_autocracy_party: "House of Habsburg"
- MEC_traditional_conservatism_party: "Partido Conservador"
- MEC_radical_democracy_party: "Military Government"
+ MEC_autocracy_party: "House of Iterbide"
+ MEC_autocracy_habsburg_party: "House of Habsburg"
+ MEC_traditional_conservatism_party: "Partido Conservador (Fusionistas)"
+ MEC_radical_democracy_party: "Partido Conservador (Zuloaguistas)"
+ MEC_chauvinist_populism_party: "Partido Conservador (Santanistas)"
 
  CHL_centrism_party: "Partido Liberal"
  CHL_radical_democracy_party: "Military Junta"
@@ -798,16 +800,16 @@
  HAI_anarchism_party: "Anarchistes haitiens"
  HAI_fundamentalism_party: "Eglise épiscopale d'Haiti"
 
-VEN_autocracy_party: "La Corona Venezolana"
-VEN_traditional_conservatism_party: "Partido Conservador"
+ VEN_autocracy_party: "La Corona Venezolana"
+ VEN_traditional_conservatism_party: "Partido Conservador"
  VEN_social_egalitarianism_party: "Partido Igualitario"
  VEN_centrism_party: "Partido Liberal"
  VEN_chauvinist_populism_party: "Unidad Nacional Venezolana"
  VEN_anarchism_party: "Asociación Venezolana Anarquista"
  VEN_fundamentalism_party: "Iglesia Episcopal de Venezuela"
-VEN_collectivist_socialism_party: "Liga Constitucional de la Clase Obrera"
-VEN_vanguard_communism_party: "Partido Revolucionario Comunista"
-VEN_radical_democracy_party: "Partido Democrático Unido"
+ VEN_collectivist_socialism_party: "Liga Constitucional de la Clase Obrera"
+ VEN_vanguard_communism_party: "Partido Revolucionario Comunista"
+ VEN_radical_democracy_party: "Partido Democrático Unido"
 
  ECU_social_egalitarianism_party: "Republican Union Party"
  ECU_centrism_party: "Partido Liberal"
