pushed this so i can work on my laptop over break

--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -6,6 +6,9 @@
  PIE_Form_Italy: "Form Italy"
  PIE_Form_Italy_desc: "The time has come to claim the title of Italy for our nation!"
 
+PIE_historical_strategy_name: "Historical plan for the §bKingdom of Sardinia-Piedmont§!."
+PIE_historical_strategy_desc: "Forces the §bKingdom of Sardinia-Piedmont§! to adhere to their historical path in their focus tree."
+
 #_________________________________________________________#
 ###                                                     ###
 ###                 Regional Name Change                ###
