--- a/toi/localisation/english/spain_l_english.yml
+++ b/toi/localisation/english/spain_l_english.yml
@@ -280,6 +280,7 @@ spain.54.t: "A Choice must be Made"
 spain.54.a: "We will Crown Amadeo"
 spain.54.b: "The Count of Montpensier is the only option left"
 spain.55.t: "Royal Candidate Confirmed"
+spain.55.d.leopold: "Even after our request for Leopold von Sigmar-holenzorn as our king sent into motion wrangling amongst the Germans and the French. Leopold is still avaliable and willing to be our king. All that awaits now is a motion in the cortez."
 spain.55.a: "Time to Organise the Coronation"
 spain.56.t: "Election of [GetYear]"
 spain.56.a: "A Liberal Union-Progressive Coalition"
@@ -636,6 +637,22 @@ SPR_6dy_death_to_tratiors: "Death to Tratiors"
 SPR_6dy_exile_for_tratiors: "Exile for Tratiors"
 SPR_6dy_fortify_bilbao: "Fortify Bilbao"
 SPR_6dy_building_loyal_nobility: "Building a Loyal Nobility"
+SPR_6dy_expand_41_steel_production: "Expand Steel Production in [41.GetName]"
+SPR_6dy_expand_basque_steel_production: "Expand Steel Production in [1059.GetName]"
+SPR_6dy_found_steel_mills_barcelona: "Found Steel Production in Barcelona"
+SPR_6dy_found_steel_mills_belmez: "Found Steel Production in Belmez"
+SPR_6dy_kickstarting_new_companies: "Kickstarting New Companies"
+SPR_6dy_rasing_customs_barriers: "Rasing Customs Barriers"
+SPR_6dy_founding_spanish_colonial_bank: "Founding a Spanish Colonial Bank"
+SPR_6dy_new_naval_program: "New Naval Program"
+SPR_6dy_bilbao_dockyards: "Bilbao Dockyards"
+SPR_6dy_organising_a_royal_tour: "Organising a Royal Tour"
+SPR_6dy_reform_the_army: "Reform the Army"
+SPR_6dy_peace_with_south_america: "Peace with South America"
+SPR_6dy_fortifying_formosa: "Fortifying Formosa"
+SPR_6dy_profits_from_cava: "Profits from Cava"
+SPR_6dy_army_recruitment_and_replacement_law: "Army Recruitment and Replacement Law"
+SPR_6dy_investments_in_cereals: "Investments in Cereals"
 
 ##### IDEAS #####
 #Country Ideas
@@ -689,6 +706,9 @@ SPR_francisco_serrano_regent: "Regent Francisco Serrano"
 SPR_carlistwar: "Third Carlist War"
 SPR_carlistwar_2: "Third Carlist War"
 SPR_carlistwar_3: "Third Carlist War"
+SPR_banco_hispano_colonial: "Banco Hispano Colonial"
+SPR_recuitment_and_replacement_act: "Recuitment and Replacment Act"
+SPR_grain_investments: "Grain Investments"
 
 ### MISCELANEA ###
 #Construction Bonuses
