--- a/toi/localisation/english/spain_l_english.yml
+++ b/toi/localisation/english/spain_l_english.yml
@@ -271,6 +271,9 @@ spain.44.a: "Levy War Reperations"
 spain.44.b: "We Simply Wanted to Recoal our Navy"
 spain.45.t: "Treaty of Peace and Friendship with the [FROM.GetName]"
 spain.46.t: "Search for a King"
+spain.46.a: "Offer the crown to the King of Portugal"
+spain.46.b: "Offer the crown to the Regent of Portugal"
+spain.46.c: "Offer the crown to the Duke of Montpensier"
 spain.47.t: "Luis I is offered the Crown of Spain"
 spain.47.a: "We Will not join a Union with spain"
 spain.47.b: "For Iberia!"
@@ -323,6 +326,14 @@ spain.70.t: "Topete Offers Pro-Monarch Coup"
 spain.70.a: "Reject his Offer"
 spain.70.b: "Accept his Offer"
 spain.71.t: "Resignation of the King"
+
+spain.73.t: "Elections of April 1872"
+spain.73.a_conciliation: "Cimbri Victory"
+spain.73.b_conciliation: "Federal-Democratic Victory"
+spain.73.c_conciliation: "Radical Victory"
+spain.73.e_conciliation: "Conservative Victory"
+spain.73.a_federal: "Moderate Victory"
+
 
 spain.80.t: "[FROM.GetName] sends Envoys"
 spain.81.t: "Rebellion of the Mantillas"
@@ -985,3 +996,5 @@ SPR_federalist_uprising: "the §YFederatlist Rebellion§! is ongoing"
 SPR_cantonist_uprising: "the §YCantonist Revolution§! is ongoing"
 SPR_petrolum_revolution: "the §YPetrolum Revolution§! is ongoing"
 SPR_not_in_crisis_tt: "§Y[SPR.GetName]§! is not dealing with a Pressing Conflict"
+
+eoanb_decision_establish_cambodian_protectorate: "Establish Cambodian Protectorate"
