--- a/toi/localisation/english/countries_cosmetic_l_english.yml
+++ b/toi/localisation/english/countries_cosmetic_l_english.yml
@@ -1416,6 +1416,10 @@
  BAS_carlist_spain: "Carlist Spain"
  BAS_carlist_spain_DEF: "Carlist Spain"
  BAS_carlist_spain_ADJ: "Carlist"
+ 
+ ADU_committee_of_public_health_spain: "Committee of Public Health"
+ ADU_committee_of_public_health_spain_DEF: "The Spanish Committe of Public Health"
+ ADU_committee_of_public_health_spain_ADJ: "Spanish"
 
  BOT_ENG_Protectorate_Cosmetic: "Bechuanaland"
  BOT_ENG_Protectorate_Cosmetic_DEF: "Bechuanaland"
