Mexico before sleep

--- a/toi/localisation/english/equipment_l_english.yml
+++ b/toi/localisation/english/equipment_l_english.yml
@@ -3949,6 +3949,7 @@
  EQ_MOD_CAT_battery_12in_early_TITLE: "12 Inch Guns"
  EQ_MOD_CAT_battery_13in_early_TITLE: "13 Inch Guns"
  EQ_MOD_CAT_battery_16in_early_TITLE: "16 Inch Guns"
+ EQ_MOD_CAT_secondary_47mm_early_TITLE: "47mm Secondaries"
  EQ_MOD_CAT_ship_screen_armor_TITLE: "Screen Ship Armor"
  EQ_MOD_CAT_ship_engine_sail_screen_TITLE: "Sail Masts"
  EQ_MOD_CAT_ship_engine_sail_gunboat_TITLE: "Sail Masts"
