--- a/toi/localisation/english/indochina_l_english.yml
+++ b/toi/localisation/english/indochina_l_english.yml
@@ -44,7 +44,7 @@
  # Cochinchina Tooltips
  VIN_Cochinchina_Campaign_Investment_Modify_tt: "Modify [?ROOT.VIN_Cochinchina_Campaign_Investment_Level_Modify] by [?ROOT.VIN_Cochinchina_Campaign_Investment_Level_Modify]"
 
-
+ INDOC_Colonial_Aggression_Category: "Indochina Colonisation"
 
 
 
