--- a/toi/localisation/english/spain_l_english.yml
+++ b/toi/localisation/english/spain_l_english.yml
@@ -361,6 +361,7 @@ SPR_mission_zaragoza_barcelona_railway_concession: "Zaragoza-Barcelona Railway C
 SPR_mission_madrid_santander_railway_concession: "Madrid-Santander Railway Concession"
 SPR_mission_madrid_cadiz_railway_concession: "Madrid-Cadiz Railway Concession"
 SPR_mission_madrid_cartagena_railway_concession: "Madrid-Cartagena Railway Concession"
+SPR_mission_seville_railway_concession: "Seville Railway Concession"
 SPR_pact_of_zanjon: "The Pact of Zanjón"
 SPR_metric_adaption: "Adopting the Metric System"
 SPR_calming_the_king: "Calming the King"
