--- a/toi/localisation/english/_eoanbr_technologies_l_english.yml
+++ b/toi/localisation/english/_eoanbr_technologies_l_english.yml
@@ -3066,3 +3066,4 @@
  tech_projects_homestead_investments_desc: ""
  tech_projects_settle_subsidies: "Settle Subsidies"
  tech_projects_settle_subsidies_desc: ""
+ tech_naval_mtg_studded_shells: "Naval Studded Shells"
