--- a/toi/localisation/english/usa_l_english.yml
+++ b/toi/localisation/english/usa_l_english.yml
@@ -941,8 +941,8 @@
  USA_gilded_formation_improvements_desc: "Thanks to the Great White Fleet's journey, we've gained invaluable experience in how to organize our Navy's formations for long-range deployments."
  USA_gilded_columbia_gem_of_the_ocean: "Columbia, Gem of the Ocean"
  USA_gilded_columbia_gem_of_the_ocean_desc: "O Columbia! the gem of the ocean,\nThe home of the brave and the free,\nThe shrine of each patriot's devotion,\nA world offers homage to thee!"
- USA_gilded_el_senor_abrasador: "El Señor Abrasador"
- USA_gilded_el_senor_abrasador_desc: "Spain is the oldest colonial empire still holding territory in the Americas. Since it's lost the vast majority of its colonies, the old empire has been in a period of decline, struggling to keep its own homeland stable and to hold onto a small set of overseas islands. This is an opportunity. An opportunity for America to topple one of the oldest empires and demonstrate American strength on the global stage."
+ USA_gilded_la_senora_abrasadora: "La Señora Abrasadora"
+ USA_gilded_la_senora_abrasadora_desc: "Spain is the oldest colonial empire still holding territory in the Americas. Since it's lost the vast majority of its colonies, the old empire has been in a period of decline, struggling to keep its own homeland stable and to hold onto a small set of overseas islands. This is an opportunity. An opportunity for America to topple one of the oldest empires and demonstrate American strength on the global stage."
  USA_gilded_assert_our_position_in_the_caribbean: "Assert Our Position In The Caribbean"
  USA_gilded_assert_our_position_in_the_caribbean_desc: "The Caribbean is a particular weak spot for the Spanish. The Cubans have a history of resisting Spanish rule and with them being just off our shores, it'll be easy to blockade and invade the island should a war arise. Showing the Spanish the reality of their situation will hopefully dissuade them from being too aggressive in future negotiations."
  USA_gilded_santo_domingo_forward_operating_base: "Santo Domingo Forward Operating Base"
@@ -955,6 +955,20 @@
  USA_gilded_cuban_statehood_desc: ""
  USA_gilded_fund_cuban_rebels: "Support Cuban Rebels"
  USA_gilded_fund_cuban_rebels_desc: "The Spanish seem completely unwilling to handle the Cuba question peacefully. We need to start preparing for a violent confrontation with the Spanish and supporting the Cuban rebels resisting colonial rule will give us a good start."
+ USA_gilded_position_the_navy: "Position The Navy"
+ USA_gilded_position_the_navy_desc: "With the Caribbean Ocean being so close to our home, putting the Navy in a battle-ready posture will be a relatively easy feat to accomplish while giving us leverage when dealing with the Spanish."
+ USA_gilded_an_explosion_in_havana: "An Explosion In Havana"
+ USA_gilded_an_explosion_in_havana_desc: "BREAKING NEWS! MAINE DESTROYED IN HAVANA HARBOR, SHIP BLOWN UP AT ANCHOR! Four Hundred and Twenty of Uncle Sam's Brave Boys Are Killed!"
+ USA_gilded_blockade_cuba: "Blockade Cuba"
+ USA_gilded_blockade_cuba_desc: "With our Navy in position around the island of Cuba, we have the ability to enforce a blockade around the island to isolate the Spanish forces present."
+ USA_gilded_call_for_volunteers: "Call For Volunteers"
+ USA_gilded_call_for_volunteers_desc: "With war against Spain imminent, we'll need to send out a call for volunteers to help shore up our numbers in the coming fight to avenge our boys on the USS Maine!"
+ USA_gilded_remember_the_maine: "Remember The Maine"
+ USA_gilded_remember_the_maine_desc: "The sinking of the USS Maine has resulted in a roaring outcry from sea to shining sea with Americans of all stripes calling for war against the Spanish for engaging in this unprovoked aggression. A new battle cry, where the people call out "Remember the Maine...""
+ USA_gilded_to_hell_with_spain: "To Hell With Spain!"
+ USA_gilded_to_hell_with_spain_desc: ""...to hell with Spain!""
+ USA_gilded_into_an_american_century: "Into An American Century"
+ USA_gilded_into_an_american_century_desc: "America is now treated as a great power, a nation on the same level of prestige as that of the British and French. Our nation will only continue to grow in size and strength throughout the 20th century--No, throughout the American Century!"
 
  USA_demobilize_the_military: "Demobilize The Military"
  USA_demobilize_the_military_desc: "We had to massively increase the size of the armed forces during the Civil War. Now that the war is over, the costs of maintaining that military are overcoming the benefits we're recieving from it. It's time to demobilize and re-focus on our civilian economy."
