--- a/toi/localisation/english/ideologies_l_english.yml
+++ b/toi/localisation/english/ideologies_l_english.yml
@@ -205,7 +205,7 @@
   # Dixie Progressivism
     dixie_progressivism: "Dixie Progressive"
     dixie_progressivism_noun: "Dixie Progressivism"
-    dixie_progressivism_desc: "A "Dixie Progressive" is a type of progressivism found in the American South which advocates for economically progressive policies while standing in strong opposition to Civil Rights and racial equality."
+    dixie_progressivism_desc: ""Dixie Progressivism" is a type of progressivism found in the American South which advocates for economically progressive policies while standing in strong opposition to Civil Rights and racial equality."
 
 # Authoritarian Democracy
  radical_democracy: "Peripheral"
